--- a/js_basic/lesson_1/index.html
+++ b/js_basic/lesson_1/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Javascrip basic</h1>
 
-    <script src="./main.js"></script>
+    <script src="../lesson_1/main.js"></script>
 </body>
 </html>
